<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 JustWayward Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlBookReadRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_leather_bg"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flReadWidget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:layerType="hardware" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/abc_text_size_title_material"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
                android:keepScreenOn="true"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/primary_dark_material_dark"
                android:textSize="@dimen/abc_text_size_display_1_material"  />
            <TextView
                android:id="@+id/bible_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:keepScreenOn="true"
                android:textIsSelectable="true"
                android:longClickable="true"
                android:text="@string/NoRecent"
                android:textColor="@color/primary_dark_material_dark"
                android:textSize="@dimen/abc_text_size_medium_material" />


        </LinearLayout>
    </ScrollView>
    <include layout="@layout/layout_read_aa_set" />


    <LinearLayout
        android:id="@+id/llBookReadBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary_dark_material_dark"
        android:clickable="true"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvBookReadMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_menu_mode_night_normal"
            android:gravity="center"
            android:text="@string/book_read_mode_day"
            android:textColor="@color/book_read_bottom_text"
            android:textSize="@dimen/abc_text_size_small_material" />

        <TextView
            android:id="@+id/tvBookReadSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_menu_settings_normal"
            android:gravity="center"
            android:text="@string/action_settings"
            android:textColor="@color/book_read_bottom_text"
            android:textSize="@dimen/abc_text_size_small_material" />

        <TextView
            android:id="@+id/tvBookReadDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_emoji_recent"
            android:gravity="center"
            android:text="@string/book_read_download"
            android:textColor="@color/book_read_bottom_text"
            android:textSize="@dimen/abc_text_size_small_material" />

        <TextView
            android:id="@+id/tvBookMark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_menu_bookmark"
            android:gravity="center"
            android:text="@string/book_read_mark"
            android:textColor="@color/book_read_bottom_text"
            android:textSize="@dimen/abc_text_size_small_material" />

        <TextView
            android:id="@+id/tvBookReadToc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_menu_toc_normal"
            android:gravity="center"
            android:text="@string/book_read_toc"
            android:textColor="@color/book_read_bottom_text"
            android:textSize="@dimen/abc_text_size_small_material" />
    </LinearLayout>

</RelativeLayout>